--- a/configure.ac
+++ b/configure.ac
@@ -719,6 +719,21 @@ if test x$use_upnp != xno; then
   )
 fi
 
+dnl Check to find the libsodium headers/libraries
+AC_CHECK_LIB(sodium, sodium_init,[],
+[AC_MSG_ERROR([The Sodium crypto library libraries not found.])]
+)
+
+AC_COMPILE_IFELSE([AC_LANG_PROGRAM([
+#include <sodium.h>
+], [
+#if SODIUM_LIBRARY_VERSION_MAJOR < 9 || SODIUM_LIBRARY_VERSION_MAJOR == 9 && SODIUM_LIBRARY_VERSION_MINOR < 5
+# error
+#endif
+])],
+[AC_MSG_RESULT([checking for version of libsodium... yes])],
+[AC_MSG_ERROR([Wrong libsodium: version >= 1.0.13 required])])
+
 BITCOIN_QT_INIT
 
 dnl sets $bitcoin_enable_qt, $bitcoin_enable_qt_test, $bitcoin_enable_qt_dbus
